@@ -680,10 +680,18 @@ Use @code{AC_PROG_MAKE_SET} if the package is not flat.
 @cvindex AC_PROG_MAKE_SET
 
 @item
+Use @code{AM_SANITY_CHECK} to make sure the build environment is sane.
+
+@item
 Use @code{AM_PROG_INSTALL} if any scripts (@pxref{Scripts}) are
 installed by the package.  Otherwise, use @code{AC_PROG_INSTALL}.
 @cvindex AC_PROG_INSTALL
 @cvindex AM_PROG_INSTALL
+
+@item
+Use @code{AM_MISSING_PROG} to see whether the programs @code{aclocal},
+@code{autoconf}, @code{automake}, @code{autoheader}, and @code{makeinfo}
+are in the build environment.
 @end itemize
 
 
@@ -958,6 +966,12 @@ define @code{GWINSZ_IN_SYS_IOCTL}.  Otherwise @code{TIOCGWINSZ} can be
 found in @file{<termios.h>}.
 @cvindex AM_HEADER_TIOCGWINSZ_NEEDS_SYS_IOCTL
 
+@item AM_INIT_AUTOMAKE
+Runs many macros that most @file{configure.in}'s need.  This macro has
+two required arguments, the package and the version number.  By default
+this macro @code{AC_DEFINE}'s @samp{PACKAGE} and @samp{VERSION}.  This
+can be avoided by passing in a non-empty third argument.
+
 @item AM_PATH_LISPDIR
 Searches for the program @code{emacs}, and, if found, sets the output
 variable @code{lispdir} to the full path to Emacs' site-lisp directory.
@@ -981,12 +995,12 @@ code in ANSI C, you can make an un-ANSIfied copy of it by using the
 Like @code{AC_PROG_INSTALL}, but also defines @code{INSTALL_SCRIPT}.
 @cvindex AM_PROG_INSTALL
 
-@item AM_SANITY_CHECK_CC
+@item AM_SANITY_CHECK
 This checks to make sure that a file created in the build directory is
 newer than a file in the source directory.  This can fail on systems
 where the clock is set incorrectly.  This macro is automatically run
 from @code{AM_INIT_AUTOMAKE}.
-@cvindex AM_SANITY_CHECK_CC
+@cvindex AM_SANITY_CHECK
 
 @item AM_SYS_POSIX_TERMIOS
 Check to see if POSIX termios headers and functions are available on the
