@@ -1,3 +1,3 @@
-@set UPDATED 25 March 1997
+@set UPDATED 27 March 1997
 @set EDITION 1.1n
 @set VERSION 1.1n
